@@ -21,25 +21,164 @@
 *~
 .gdbinit
 .htaccess
+.lineno
+1000.scsm
 GNUmakefile
+System
+ab
 aclocal.m4
+add
+aly
+arial.pfa
 autom4te.cache
+ay
+ay.tar.gz
+aybabtu.afm
+b
+bench.sh
+bla
+bla.lytex
+builddir.make
+c.afm
+c.pfb
+calls
+cf2.zip
+cffpats
+conf32255.sh
+config-g16.hh
 config-g16.make
+config-g164.hh
+config-g164.make
+config-g16nothread.hh
+config-g16nothread.make
+config-g16opt.hh
 config-g16opt.make
+config-opt.hh
 config-opt.make
+config-optsize.hh
+config-optsize.make
+config-prof.hh
 config-prof.make
+config-speed.hh
+config-speed.make
 config.hh
 config.make
 config.status
+configure
+cont
+cp.out
+crashes
 custom.py
+d
+dif
+example-1.texstr
+exp.scm
+f.texstr
+f.textmetrics
+fcc.c
+fi.py
+fingpats
+firefox.icns
+fondu3FB3-2
+fondu_src-050825.tgz
+fontconfig
+fontconfig.c
+foo.c
+foo.make
+glob
+grob-array-pats
+gsbug-inv
+gspatch
+gstest
+hello
+hello.utf
+htpasswd
 install-sh
+invstrength
+les-nereides.dsc
+les-nereides.texstr
+les-nereides.textmetrics
+lib
+lilymydear.zip
+lilypond-2.6.0-2.7.0.diff
+lilypond-internals.texi
+lilypond-tools.zip
+log
+lppats
+lute_archives
+m
+makefile.pango
+makelily.py
+mehl
+mingw
+morgenlied.lpm
+morgenlied.texstr
+munix
+mxlpats
+ncsb-ttf
+ncsb-ttf.tar.gz
+notitle.zip
+o2
+ok
+optpars.py
+optparse.py
+optparse.pyc
+os
+otftest.c
 out
 out-g16
+out-g164
+out-g16nothread
 out-g16opt
 out-opt
+out-optsize
 out-prof
+out-speed
 out-www
+out.ai
+out.pfa
+out.sk
+out.spsc
+p
+p2
+pango
+pango.c
 patch
+patent
 pats
+pic
+pl.afm
+polyprof
+quotpats
+re
+s
+s.py
 scons.cache
+setup.ini
+sf.ai
+sgz
 share
+sib.py
+simple-song.twy
+socket-output
+stat
+string
+sys
+t
+t.gz
+t2.c
+talk.py
+test.py
+test.scm
+timtekst
+ud
+uninstalldirs
+update-rhsources.sh
+us
+usr
+ver
+webdif
+wrap.scm
+wtk-prof
+wtk-prof2
+wtk1-fugue2.scm
