@@ -1,3 +1,14 @@
+2005-12-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/*.scm: use LEFT/RIGHT/UP/DOWN etc. iso. magical numbers.
+
+2005-12-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/font-config.cc (init_fontconfig): print warning if cache
+	file is not existant.
+
+	* lily/main.cc: don't use #ifdef but #if
+
 2005-12-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/grob-property.cc (internal_set_property): don't abort on
